@@ -1,22 +1,18 @@
 {
   "downloadsURLs": {
     "release": "https://aus1.torproject.org/torbrowser/update_2/release/downloads.json",
-    "alpha": "https://aus1.torproject.org/torbrowser/update_2/alpha/downloads.json",
-    "hardened": "https://aus1.torproject.org/torbrowser/update_2/hardened/downloads.json"
+    "alpha": "https://aus1.torproject.org/torbrowser/update_2/alpha/downloads.json"
   },
   "downloadsOnions": {
     "release": "http://x3nelbld33llasqv.onion/torbrowser/update_2/release/downloads.json",
-    "alpha": "http://x3nelbld33llasqv.onion/torbrowser/update_2/alpha/downloads.json",
-    "hardened": "http://x3nelbld33llasqv.onion/torbrowser/update_2/hardened/downloads.json"
+    "alpha": "http://x3nelbld33llasqv.onion/torbrowser/update_2/alpha/downloads.json"
   },
   "updateURLs": {
     "release": "https://aus1.torproject.org/torbrowser/update_2/release",
-    "alpha": "https://aus1.torproject.org/torbrowser/update_2/alpha",
-    "hardened": "https://aus1.torproject.org/torbrowser/update_2/hardened"
+    "alpha": "https://aus1.torproject.org/torbrowser/update_2/alpha"
   },
   "updateOnions": {
     "release": "http://x3nelbld33llasqv.onion/torbrowser/update_2/release",
-    "alpha": "http://x3nelbld33llasqv.onion/torbrowser/update_2/alpha",
-    "hardened": "http://x3nelbld33llasqv.onion/torbrowser/update_2/hardened"
+    "alpha": "http://x3nelbld33llasqv.onion/torbrowser/update_2/alpha"
   }
 }
