@@ -1,3 +1,3 @@
 {
-  "linux64": [ "release", "alpha", "hardened" ]
+  "linux64": [ "release", "alpha" ]
 }
