@@ -1,5 +1,4 @@
 {
   "release": [ "en-US", "ar", "de", "es-ES", "fa", "fr", "it", "ja", "ko", "nl", "pl", "pt-PT", "ru", "tr", "vi", "zh-CN" ],
-  "alpha": [ "en-US", "ar", "de", "es-ES", "fa", "fr", "it", "ja", "ko", "nl", "pl", "pt-PT", "ru", "tr", "vi", "zh-CN" ],
-  "hardened": [ "ALL"]
+  "alpha": [ "en-US", "ar", "de", "es-ES", "fa", "fr", "it", "ja", "ko", "nl", "pl", "pt-PT", "ru", "tr", "vi", "zh-CN" ]
 }
